--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -35,6 +35,9 @@ if (Bonmin_FOUND)
       set_source_files_properties (Base/Optim/Bonmin.cxx Base/Optim/BonminProblem.cxx PROPERTIES COMPILE_FLAGS "-Wno-error=unused-parameter -Wno-error=implicit-fallthrough -Wno-error=overloaded-virtual")
     endif ()
   endif ()
+  if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    set_source_files_properties (Base/Optim/Bonmin.cxx Base/Optim/BonminProblem.cxx PROPERTIES COMPILE_FLAGS "-Wno-error=unused-parameter -Wno-error=overloaded-virtual")
+  endif ()
 endif ()
 
 if (Pagmo_FOUND)
@@ -63,9 +66,12 @@ endif ()
 # SymbolicParserExprTk.cxx includes exprtk.hpp which is huge, exclude it from unity builds
 # It also causes problems on Windows
 if (OPENTURNS_HAVE_EXPRTK)
-  set_source_files_properties ("Base/Func/SymbolicParserExprTk.cxx" PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
+  set_source_files_properties (Base/Func/SymbolicParserExprTk.cxx PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
   if (MINGW)
-    set_source_files_properties ("Base/Func/SymbolicParserExprTk.cxx" PROPERTIES COMPILE_FLAGS "-Wa,-mbig-obj -g0")
+    set_source_files_properties (Base/Func/SymbolicParserExprTk.cxx PROPERTIES COMPILE_FLAGS "-Wa,-mbig-obj -g0")
+  endif ()
+  if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    set_source_files_properties (Base/Func/SymbolicParserExprTk.cxx PROPERTIES COMPILE_FLAGS "-Wno-shadow")
   endif ()
 endif()
 
