UserDefined: Simplify doc

--- a/python/src/UserDefined_doc.i.in
+++ b/python/src/UserDefined_doc.i.in
@@ -1,22 +1,14 @@
 %feature("docstring") OT::UserDefined
 "UserDefined distribution.
 
-Available constructors:
-    
-    UserDefined(*points*)
-
-    UserDefined(*points, weights*)
-
 Parameters
 ----------
 points : 2-d sequence of float
     List of :math:`n` points of dimension :math:`d` :math:`\vect{x}_i`, :math:`i = 1, \ldots, n`.
     
-    Default value is [1].
-weights : sequence of float
+weights : sequence of float, optional
     List of :math:`n` weights :math:`p_i`, :math:`i = 1, \ldots, n`.
     If :math:`\sum_{i=1}^n p_i \neq 1`, the weights are normalized.
-    
     Default value is [1].
 
 Notes
