--- a/lib/src/Uncertainty/Algorithm/Simulation/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/Simulation/CMakeLists.txt
@@ -27,6 +27,7 @@ ot_add_source_file (SubsetSampling.cxx)
 ot_add_source_file (QuadrantSampling.cxx)
 ot_add_source_file (QuantileConfidence.cxx)
 ot_add_source_file (AdaptiveDirectionalStratification.cxx)
+ot_add_source_file (LineSampling.cxx)
 ot_add_source_file (ProbabilitySimulationAlgorithm.cxx)
 ot_add_source_file (ExpectationSimulationAlgorithm.cxx)
 ot_add_source_file (ExpectationSimulationResult.cxx)
@@ -64,6 +65,7 @@ ot_install_header_file (SubsetSampling.hxx)
 ot_install_header_file (QuadrantSampling.hxx)
 ot_install_header_file (QuantileConfidence.hxx)
 ot_install_header_file (AdaptiveDirectionalStratification.hxx)
+ot_install_header_file (LineSampling.hxx)
 ot_install_header_file (ProbabilitySimulationAlgorithm.hxx)
 ot_install_header_file (ExpectationSimulationAlgorithm.hxx)
 ot_install_header_file (ExpectationSimulationResult.hxx)
