--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -808,6 +808,7 @@ ot_pyinstallcheck_test (AdaptiveDirectionalStratification_flood)
 ot_pyinstallcheck_test (AdaptiveDirectionalStratification_hyperplane)
 ot_pyinstallcheck_test (AdaptiveDirectionalStratification_std)
 ot_pyinstallcheck_test (ExpectationSimulationAlgorithm_std)
+ot_pyinstallcheck_test (LineSampling_std IGNOREOUT)
 ot_pyinstallcheck_test (SobolSimulationAlgorithm_std)
 ot_pyinstallcheck_test (NAIS_std IGNOREOUT)
 ot_pyinstallcheck_test (StandardSpaceCrossEntropyImportanceSampling_std IGNOREOUT)
