--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -845,6 +845,10 @@
   <AdaptiveDirectionalStratification-DefaultMaximumStratificationDimension value_int="3" />
   <AdaptiveDirectionalStratification-DefaultNumberOfSteps                  value_int="2" />
 
+  <!-- OT::LineSampling parameters -->
+  <LineSampling-DefaultSearchOppositeDirection value_bool="true" />
+  <LineSampling-DefaultAdaptiveImportantDirection value_bool="true" />
+
   <!-- OT::AnalyticalResult parameters -->
   <AnalyticalResult-DefaultWidth                    value_float="1.0"           />
   <AnalyticalResult-MeanPointIntegrationNodesNumber value_int="255" />
